[package]
authors = ["Ryan Heywood <me@ryansquared.pub>"]
description = "A library using nom for parsing ANSI Escape Codes"
homepage = "https://github.com/RyanSquared/ansi-parser-rs"
name = "ansi-parser"

license = "MPL-2.0"
version = "0.9.1"

edition = "2018"

[dependencies]
heapless = "0.7.16"

[dependencies.nom]
default-features = false
version = "7.1.0"

[features]
default = ["std"]
std = ["nom/std"]
